Fixing tip message top margin (that was not aligned because I removed the top bar

--- a/web-ui/app/scss/main.scss
+++ b/web-ui/app/scss/main.scss
@@ -28,7 +28,7 @@ header#main {
 
 .tip-msg {
   padding: 10px;
-  margin: 8px 20px -25px 20px;
+  margin: 38px 20px -25px 20px;
   background: $warning;
   color: darken($warning, 50%);
   font-size: 0.9em;
